[gd_scene load_steps=3 format=3 uid="uid://iylo6rem7npv"]

[ext_resource type="Script" path="res://Nodes/Scenes/page_13.gd" id="1_scm0c"]
[ext_resource type="Texture2D" uid="uid://1v21np82i05d" path="res://Sprites/NotePage13.png" id="1_vq4hs"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scm0c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vq4hs")

[node name="ExitLeft" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.254
anchor_bottom = 1.0
offset_right = -0.119995
grow_vertical = 2
flat = true

[node name="ExitRight" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.722
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.160095
grow_horizontal = 0
grow_vertical = 2
flat = true

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.656
anchor_top = 0.837
anchor_right = 0.714
anchor_bottom = 0.926
offset_left = 0.319946
offset_top = -0.119995
offset_right = 0.0799561
offset_bottom = 0.239929
flat = true

[connection signal="pressed" from="TextureRect/ExitLeft" to="." method="_on_exit_left_pressed"]
[connection signal="pressed" from="TextureRect/ExitRight" to="." method="_on_exit_right_pressed"]
[connection signal="pressed" from="TextureRect/Button" to="." method="_on_button_pressed"]
